--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "start": "nodemon app.js"
   },
   "author": "mohammedArshed",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "axios": "^0.24.0",
     "cheerio": "^1.0.0-rc.10",
     "nodemon": "^2.0.14",
     "papaparse": "^5.3.1",
     "request": "^2.88.2"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mmdarshed/dataextraction.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mmdarshed/dataextraction/issues"
+  },
+  "homepage": "https://github.com/mmdarshed/dataextraction#readme"
 }
